// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChipSelector > renders correctly with chip 1 selected 1`] = `
<div
  style="display: flex; gap: 15px; padding: 10px 20px; background: rgba(0, 0, 0, 0.8); border-radius: 50px; border: 2px solid rgb(85, 85, 85); box-shadow: 0 5px 15px rgba(0,0,0,0.5); justify-content: center; align-items: center;"
>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(136, 136, 136), rgb(68, 68, 68)); border: 3px solid rgb(255, 255, 255); box-shadow: 0 0 15px rgba(255,255,255,0.8), inset 0 0 10px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1.15) translateY(-5px); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    1
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(211, 47, 47), rgb(154, 0, 7)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    5
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(56, 142, 60), rgb(27, 94, 32)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    25
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(25, 118, 210), rgb(13, 71, 161)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(0, 0, 0); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    100
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(156, 39, 176), rgb(106, 27, 154)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(0, 0, 0); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    500
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(255, 235, 59), rgb(251, 192, 45)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    1000
  </div>
</div>
`;

exports[`ChipSelector > renders correctly with chip 100 selected 1`] = `
<div
  style="display: flex; gap: 15px; padding: 10px 20px; background: rgba(0, 0, 0, 0.8); border-radius: 50px; border: 2px solid rgb(85, 85, 85); box-shadow: 0 5px 15px rgba(0,0,0,0.5); justify-content: center; align-items: center;"
>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(136, 136, 136), rgb(68, 68, 68)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    1
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(211, 47, 47), rgb(154, 0, 7)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    5
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(56, 142, 60), rgb(27, 94, 32)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    25
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(25, 118, 210), rgb(13, 71, 161)); border: 3px solid rgb(255, 255, 255); box-shadow: 0 0 15px rgba(255,255,255,0.8), inset 0 0 10px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(0, 0, 0); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1.15) translateY(-5px); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    100
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(156, 39, 176), rgb(106, 27, 154)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(0, 0, 0); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    500
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(255, 235, 59), rgb(251, 192, 45)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    1000
  </div>
</div>
`;

exports[`ChipSelector > renders correctly with chip 1000 selected 1`] = `
<div
  style="display: flex; gap: 15px; padding: 10px 20px; background: rgba(0, 0, 0, 0.8); border-radius: 50px; border: 2px solid rgb(85, 85, 85); box-shadow: 0 5px 15px rgba(0,0,0,0.5); justify-content: center; align-items: center;"
>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(136, 136, 136), rgb(68, 68, 68)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    1
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(211, 47, 47), rgb(154, 0, 7)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    5
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(56, 142, 60), rgb(27, 94, 32)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    25
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(25, 118, 210), rgb(13, 71, 161)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(0, 0, 0); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    100
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(156, 39, 176), rgb(106, 27, 154)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(0, 0, 0); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    500
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(255, 235, 59), rgb(251, 192, 45)); border: 3px solid rgb(255, 255, 255); box-shadow: 0 0 15px rgba(255,255,255,0.8), inset 0 0 10px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1.15) translateY(-5px); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    1000
  </div>
</div>
`;

exports[`ChipSelector > renders correctly with no chip selected 1`] = `
<div
  style="display: flex; gap: 15px; padding: 10px 20px; background: rgba(0, 0, 0, 0.8); border-radius: 50px; border: 2px solid rgb(85, 85, 85); box-shadow: 0 5px 15px rgba(0,0,0,0.5); justify-content: center; align-items: center;"
>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(136, 136, 136), rgb(68, 68, 68)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    1
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(211, 47, 47), rgb(154, 0, 7)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    5
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(56, 142, 60), rgb(27, 94, 32)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    25
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(25, 118, 210), rgb(13, 71, 161)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(0, 0, 0); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    100
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(156, 39, 176), rgb(106, 27, 154)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(0, 0, 0); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    500
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(255, 235, 59), rgb(251, 192, 45)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    1000
  </div>
</div>
`;

exports[`SpinCounter > renders correctly with initial state 1`] = `
<div
  style="background: linear-gradient(135deg, rgb(26, 26, 26) 0%, rgb(14, 14, 14) 100%); border-width: 2px; border-style: solid; border-color: rgb(254, 203, 0) rgb(212, 175, 55) rgb(138, 110, 32); border-image: none; border-radius: 8px; box-shadow: 0 10px 30px rgba(0,0,0,0.9), 0 0 20px rgba(212, 175, 55, 0.2); color: rgb(224, 224, 224); font-family: monospace; text-align: center; width: 100%; height: 100%; display: flex; flex-wrap: wrap; flex-direction: row; justify-content: center; align-items: center; align-content: center; gap: 5px 15px; padding: 10px 15px; position: relative; z-index: 10; overflow: hidden; box-sizing: border-box;"
>
  <button
    style="position: absolute; top: 5px; right: 5px; width: 18px; height: 18px; border-radius: 50%; border: 1px solid rgb(212, 175, 55); background: rgba(0, 0, 0, 0.5); color: rgb(212, 175, 55); font-size: 0.6rem; cursor: help; display: flex; align-items: center; justify-content: center; z-index: 20;"
    title="Ver Justificación Forense (E15)"
  >
    ⚖
  </button>
  <div
    style="font-size: 0.85rem; color: rgb(212, 175, 55); text-transform: uppercase; letter-spacing: 1px; font-weight: bold; white-space: nowrap; display: flex; align-items: center; gap: 8px;"
  >
    <div
      style="min-width: 28px; height: 24px; padding: 0px 4px; background: rgb(255, 235, 59); color: rgb(0, 0, 0); border-radius: 12px; display: flex; align-items: center; justify-content: center; font-size: 13px; font-weight: bold; border: 2px solid rgb(0, 0, 0); box-shadow: 0 2px 4px rgba(0,0,0,0.3); flex-shrink: 0; font-family: "Roboto Condensed", sans-serif;"
    >
      E
      15
    </div>
    JUGADAS
  </div>
  <div
    style="font-size: 1.6rem; font-weight: bold; color: rgb(255, 255, 255); text-shadow: 0 0 5px rgba(255,255,255,0.3); line-height: 1;"
  >
    42
  </div>
</div>
`;
